# finalform

./: .specwright.yaml  README.md  pyproject.toml
.aip_artifacts/: execution_history.jsonl
.specwright/aips/: domain-modular-architecture-refactor.yaml  final-form-initial-spec.yaml
.specwright/specs/: domain-modular-architecture-refactor.md  final-form-initial-spec.md
final_form/: cli.py  io.py
final_form/builders/: measurement.py
final_form/core/: __init__.py  diagnostics.py  domain.py  factory.py  models.py  router.py
final_form/diagnostics/: __init__.py  collector.py  models.py
final_form/domains/: __init__.py
final_form/input/: __init__.py  client.py  process.py
final_form/interpretation/: __init__.py  interpreter.py
final_form/mapping/: __init__.py  mapper.py
final_form/pipeline/: __init__.py  orchestrator.py
final_form/recoding/: recoder.py
final_form/registry/: __init__.py  measures.py  models.py
final_form/scoring/: engine.py
final_form/validation/: checks.py
finalform/: __init__.py  cli.py
finalform/callable/: __init__.py  execute.py  (+1 more)
measure-registry/: README.md
schemas/: form_binding_spec.schema.json  measure_spec.schema.json
scripts/: convert_registry.py
tests/: conftest.py  test_all_measures.py  test_builders.py  test_core.py  test_determinism.py  test_diagnostics.py  test_domain_stubs.py  test_form_input.py  test_gad7_scoring.py  test_interpretation.py  test_mapper.py  test_phq9_scoring.py  test_pipeline.py  test_questionnaire_processor.py  test_recoder.py  test_registry.py  test_scoring.py  test_validation.py
(+33 files in other folders)
