[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "final-form"
version = "0.1.0"
description = "Semantic processing engine for psychological instruments with FHIR-aligned output"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "LifeOS Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.18.0",
    "jsonschema>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
final-form = "final_form.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["final_form"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=final_form --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
